# server_generate/api/openapi.yaml
@@ -39,38 +39,6 @@ paths:
       - onboarding
       x-eov-operation-handler: controllers/OnboardingController
   /onboarding/{id}:
-    get:
-      description: ' get onboarding data by id'
-      operationId: getOnboardingDataById
-      parameters:
-      - description: id of the onboarding
-        explode: false
-        in: path
-        name: id
-        required: true
-        schema:
-          format: uuid
-          type: string
-        style: simple
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/onboarding_data'
-          description: successful operation
-        "400":
-          description: Bad Request
-        "401":
-          description: Unauthorized
-        "403":
-          description: Forbidden
-        "500":
-          description: Internal Server Error
-      summary: get onboarding data by id
-      tags:
-      - onboarding
-      x-eov-operation-handler: controllers/OnboardingController
     put:
       description: ' update onboarding by id'
       operationId: updateOnboardingById
@@ -127,7 +95,7 @@ components:
           items:
             type: string
           type: array
-        company:
+        company_name:
           example: company
           type: string
       required:
@@ -136,110 +104,45 @@ components:
       - name
       - phone
       type: object
-    onboarding_data:
-      example:
-        company_entity_id: 0
-        activity_description: activity_description
-        contact_position_id: 5
-        us_state_id: 1
-        phone:
-        - dialCode: 4
-          number: 6901644
-        - dialCode: 4
-          number: 6901644
-        name: name
-        assetsData:
-        - company_entity_asset_id: 0
-        - company_entity_asset_id: 1
-        regulator: regulator
-        registration_gai_location:
-          adress: adress
-        legal_entity_identifier: legal_entity_identifier
-        legal_entity_name: legal_entity_name
-        regulation_number: regulation_number
-        country_id: 6
-        email:
-        - example@gmail.com
-        - example2@gmail.com
-      properties:
-        company_entity_id:
-          type: integer
-        legal_entity_name:
-          type: string
-        legal_entity_identifier:
-          type: string
-        registration_gai_location:
-          $ref: '#/components/schemas/onboarding_data_registration_gai_location'
-        country_id:
-          type: integer
-        us_state_id:
-          type: integer
-        regulator:
-          type: string
-        regulation_number:
-          type: string
-        activity_description:
-          type: string
-        name:
-          type: string
-        email:
-          example:
-          - example@gmail.com
-          - example2@gmail.com
-          items:
-            type: string
-          type: array
-        phone:
-          example:
-          - dialCode: 4
-            number: 6901644
-          - dialCode: 4
-            number: 6901644
-          items:
-            $ref: '#/components/schemas/onboarding_data_phone'
-          type: array
-        contact_position_id:
-          type: integer
-        assetsData:
-          example:
-          - company_entity_asset_id: 0
-          - company_entity_asset_id: 1
-          items:
-            $ref: '#/components/schemas/onboarding_data_assetsData'
-          type: array
-      type: object
     onboarding_update:
       properties:
-        company_entity:
-          example: makor
+        is_agreed:
+          type: boolean
+        company_id:
+          example: 4b39a1c4-60a3-11ec-a1a2-d08e7912923c
+          format: uuid
           type: string
-        company:
+        company_name:
           example: company name
           type: string
-        legal_entity_identifier:
+        LEI:
           example: xxxx
           type: string
-        registration_gapi_location:
-          $ref: '#/components/schemas/onboarding_update_registration_gapi_location'
-        country:
-          example: israel
+        address:
+          $ref: '#/components/schemas/onboarding_update_address'
+        country_id:
+          example: 4b39a1c4-60a3-11ec-a1a2-d08e7912923c
+          format: uuid
           type: string
-        us_state:
-          example: alabama
+        us_state_id:
+          example: 4b39a1c4-60a3-11ec-a1a2-d08e7912923c
+          format: uuid
           type: string
-        regulator:
-          example: regulator
+        regulator_id:
+          example: 4b39a1c4-60a3-11ec-a1a2-d08e7912923c
+          format: uuid
           type: string
         regulation_number:
           example: 123abc
           type: string
-        activity_description:
+        comment:
           example: comment
           type: string
         company_asset:
           $ref: '#/components/schemas/onboarding_update_company_asset'
-        contact_position:
-          example: sales
+        contact_position_id:
+          example: 4b39a1c4-60a3-11ec-a1a2-d08e7912923c
+          format: uuid
           type: string
         contact_name:
           example: name
@@ -253,34 +156,13 @@ components:
           type: array
         contact_phone:
           example:
-          - dailing_code: "00"
-            number: "123456"
-          - dailing_code: "00"
-            number: "123456"
+          - "0500000000"
+          - "0500000001"
           items:
-            $ref: '#/components/schemas/onboarding_update_contact_phone'
+            type: string
           type: array
       type: object
-    onboarding_data_registration_gai_location:
-      example:
-        adress: adress
-      properties:
-        adress:
-          type: string
-      type: object
-    onboarding_data_phone:
-      properties:
-        dialCode:
-          type: integer
-        number:
-          type: integer
-      type: object
-    onboarding_data_assetsData:
-      properties:
-        company_entity_asset_id:
-          type: integer
-      type: object
-    onboarding_update_registration_gapi_location:
+    onboarding_update_address:
       example:
         lat: 123
         lng: 456
@@ -292,20 +174,14 @@ components:
       type: object
     onboarding_update_company_asset:
       example:
-        asset_id: fixed income
+        asset_id: 4b39a1c4-60a3-11ec-a1a2-d08e7912923c
         is_add: true
       properties:
         asset:
+          format: uuid
           type: string
         is_add:
           type: boolean
-      type: object
-    onboarding_update_contact_phone:
-      properties:
-        dailing_code:
-          type: string
-        number:
-          type: string
       type: object
   securitySchemes:
     bearerAuth:
